<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Authentication Required"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:text="First name:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/textView2"
        android:hint="First Name">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="41dp"
        android:text="Last Name:"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/Lastname"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="Surname"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_toStartOf="@+id/email"
        android:layout_toLeftOf="@+id/email"
        android:text="Email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText

        android:id="@+id/email"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:hint="enter email ID">

    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="174dp"
        android:text="Password:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:hint="testpass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:onClick="authenticateLogin"
        android:text="Login" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="-6dp"
        android:layout_marginBottom="-72dp"
        android:hint="message" />

</RelativeLayout>